tests/idris2/total019/expected
1/1: Building Check (Check.idr)
Error: foo is not total, possibly not terminating due to recursive path Main.foo

Check:3:1--3:35
 1 | %default total
 2 | 
 3 | foo : List Char -> List Char -> ()
     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

